src/App.css
.sidebar {
    grid-area: sidebar;
    background-color: darkslategray;
    color: #fff;
    display: flex;
    flex-direction: column;
    min-height: 800px;
}

.box.sidebar {
  padding: 25px 10px;
  font-size: medium;
}

.content {
    grid-area: content;
}

.header {
    grid-area: header;
}

.footer {
    grid-area: footer;
}


.wrapper {
    display: grid;
    grid-gap: 0;
    grid-template-columns: 1fr 4fr 1fr;
    grid-template-areas:
    "header header header"
    "sidebar content content"
    "footer  footer  footer";
    background-color: #fff;
    color: #444;
}


.box {
  padding: 10px;
  font-size: 150%;
}

.header,
.footer {
  background-color: darkolivegreen;
  color: #fff;
}
.item {
  padding: 10px;
}
.item.selected-room {
  background-color: green;
  padding: 10px;
  color: #fff;
  width: 100%;
  border-radius: 10px;
}

div.callout {
	height: 60px;
	width: 200px;
	float: left;
}

div.callout {
	background-color: #444;
	background-image: -moz-linear-gradient(top, #444, #444);
	position: relative;
	color: #ccc;
	padding: 10px;
	border-radius: 3px;
	box-shadow: 0px 0px 20px #999;
	margin: 25px;
	min-height: 50px;
	border: 1px solid #333;
	text-shadow: 0 0 1px #000;
}

.callout::before {
	content: "";
	width: 0px;
	height: 0px;
	border: 0.8em solid transparent;
	position: absolute;
}

.callout.top::before {
	left: 45%;
	bottom: -20px;
	border-top: 10px solid #444;
}

.callout.bottom::before {
	left: 45%;
	top: -20px;
	border-bottom: 10px solid #444;
}

.callout.left::before {
	right: -22px;
	top: 25%;
	border-left: 10px solid #444;
}

.callout.right::before {
	left: -22px;
	top: 25%;
	border-right: 10px solid #444;
}

.callout.top-left::before {
	left: 7px;
	bottom: -20px;
	border-top: 10px solid #444;
}

.callout.top-right::before {
	right: 7px;
	bottom: -20px;
	border-top: 10px solid #444;
}

.callout-wrapper-left {
  display: grid;
  grid-gap: 0;
  grid-template-columns: 4fr 80px;
  grid-template-areas:
  "bubble imageavatar";
  align-items: center;
  justify-items: right;
}

.callout-wrapper {
  display: grid;
  grid-gap: 0;
  grid-template-columns: 80px 4fr;
  grid-template-areas:
  "imageavatar bubble";
  align-items: center;
}

.imageavatar {
  justify-self: center;
  font-size: medium;
}

div.callout.left.bubble,
div.callout.right.bubble {
  width: 50vw;
  height: auto; 
  line-height: 1.5em;
  font-size: medium;
  overflow-wrap: break-word;
}

div.callout.right.bubble {
  margin-left: 15px;
}

div.callout.left.bubble {
  margin-right: 15px;
}

